fix: correct mobile footer alignment and override desktop styles

--- a/scss/desktop/_footer.scss
+++ b/scss/desktop/_footer.scss
@@ -18,10 +18,3 @@
     text-align: center;
 }
 
-.footer-right {
-    align-self: flex-end;
-
-    p {
-        text-align: right;
-    }
-}
