--- a/scss/mobile/_main-news-and-contact-mobile.scss
+++ b/scss/mobile/_main-news-and-contact-mobile.scss
@@ -1,3 +1,5 @@
+@media (max-width: 768px) {
+
 .news {
     grid-area: news;
 }
@@ -71,7 +73,6 @@ legend {
     outline-offset: 2px;
 }
 
-
 .topic-option {
     display: flex;
     align-items: center;
@@ -110,6 +111,8 @@ legend {
 }
 
 .name-img img{
-    width: 300px;
+    width: 200px;
     height: auto;
+}
+
 }
